# aoc2024

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: test.yaml
1/src/: main.rs
10/: Cargo.toml
10/src/: main.rs
11/: Cargo.toml
11/src/: main.rs
2/src/: main.rs
3/: Cargo.toml
3/src/: main.rs
4/src/: main.rs
5/src/: main.rs
6/: Cargo.toml
6/src/: main.rs
7/: Cargo.toml
7/src/: main.rs
8/: Cargo.toml
8/src/: main.rs
9/src/: main.rs
boilerplate/src/: main.rs
libs/grid/src/: lib.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
utils/grid/: Cargo.toml  lib.rs
utils/misc/: Cargo.toml
utils/misc/src/: lib.rs
